# VLLM-math-generation

./: .gitignore  EVALUATION_QUICKSTART.md  README.md  SFT_FRAMEWORK_OVERVIEW.md  SFT_SETUP_GUIDE.md  environment.yml  pyproject.toml  requirements.txt
.claude/: .nfs0000000016e5451d00000493
checkpoints/sft_qwen2.5_math_1.5b/: response_length_stats.json
configs/: inference_config.yaml
data/sft/: val.parquet
eval_results/detailed/: detailed_results_20260212_102323.jsonl  detailed_results_20260216_000731.jsonl  detailed_results_20260216_012323.jsonl
eval_results/reports/: evaluation_20260212_102323.json  evaluation_20260212_102323.md  evaluation_20260212_102742.csv  evaluation_20260212_102742.json  (+10 more)
evaluation/: README.md  __init__.py  answer_matcher.py  evaluator.py  generate_report.py  metrics.py  run_evaluation.py
scripts/: convert_jsonl_to_parquet.py  filter_correct_solutions.py  filter_jsonl_by_length.py  load_math_dataset.py  measure_avg_trajectory_length.py  prepare_dapo_data.sh  run_dapo_from_checkpoint.sh  run_local_pipeline.py  run_sft_peft.sh  run_sft_training.sh  run_sft_training_with_logging.sh  run_vllm_inference.py  sanity_check.py  sweep_dapo_accuracy.py  sweep_dapo_checkpoints.sh  sweep_trajectory_lengths.py
sft/: README.md  SFT_QUICKSTART.md  example_self_improvement.sh  example_train.sh  prepare_data.py  teacher_student_workflow.md  train_with_response_length_logging.py
sft_output/: response_length_log.json
slurm/: run_inference.slurm  run_sanity_check.slurm  sft_peft.slurm  sft_training.slurm
wandb/: latest-run
(+29 files in other folders)
